# sql-shell

./: .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
src/: __init__.py  main.py
src/display/: __init__.py  table.py
src/fsm/: __init__.py  fsm.py
src/fsm/executor/: __init__.py
src/fsm/state/: __init__.py  analytic.py  constants.py  staging.py  state.py  transaction.py
src/repl/: __init__.py  cmd_queue.py  constants.py  display.py  shell.py
tests/: requirements.txt  test_attr_cmd_parse.py  test_cmd_queue.py
